--- a/less/buttons.less
+++ b/less/buttons.less
@@ -86,6 +86,11 @@
   .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border);
 }
 
+// custom pilatus blue button
+.btn-pilatus {
+  .button-variant(@btn-pilatus-color; @btn-pilatus-bg; @btn-pilatus-border);
+}
+
 
 // Link buttons
 // -------------------------
