added some buttons, somehow radius does not work

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -87,10 +87,17 @@
 }
 
 // custom pilatus blue button
-.btn-pilatus {
-  .button-variant(@btn-pilatus-color; @btn-pilatus-bg; @btn-pilatus-border);
+.btn-blue {
+  .button-variant(@btn-blue-color; @btn-blue-bg; @btn-blue-border);
 }
 
+.btn-grey {
+  .button-variant(@btn-grey-color; @btn-grey-bg; @btn-grey-border);
+}
+
+.btn-white {
+  .button-variant(@btn-white-color; @btn-white-bg; @btn-white-border);
+}
 
 // Link buttons
 // -------------------------
