--- a/less/pilatus-custom-variables.less
+++ b/less/pilatus-custom-variables.less
@@ -19,7 +19,9 @@
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
-@brand-pilatus:         #0d2d82;
+@brand-blue:            #0d2d82;
+@brand-grey:            #E6E6E6;
+@brand-white:           #FFFFFF;
 
 
 //== Scaffolding
@@ -169,16 +171,24 @@
 @btn-danger-bg:                  @brand-danger;
 @btn-danger-border:              darken(@btn-danger-bg, 5%);
 
-@btn-pilatus-color:               #fff;
-@btn-pilatus-bg:                  @brand-pilatus;
-@btn-pilatus-border:              darken(@btn-pilatus-bg, 5%);
+@btn-blue-color:               #fff;
+@btn-blue-bg:                  @brand-blue;
+@btn-blue-border:              darken(@btn-blue-bg, 5%);
+
+@btn-grey-color:               #fff;
+@btn-grey-bg:                  @brand-grey;
+@btn-grey-border:              darken(@btn-grey-bg, 5%);
+
+@btn-white-color:               #fff;
+@btn-white-bg:                  @brand-white;
+@btn-white-border:              darken(@btn-white-bg, 5%);
 
 @btn-link-disabled-color:        @gray-light;
 
 // Allows for customizing button radius independently from global border radius
-@btn-border-radius-base:         @border-radius-base;
-@btn-border-radius-large:        @border-radius-large;
-@btn-border-radius-small:        @border-radius-small;
+@btn-border-radius-base:         2px;
+@btn-border-radius-large:        2px;
+@btn-border-radius-small:        2px;
 
 
 //== Forms
