--- a/docs/_includes/css/buttons.html
+++ b/docs/_includes/css/buttons.html
@@ -42,7 +42,9 @@
         <button type="button" class="btn btn-warning">Warning</button>
         <button type="button" class="btn btn-danger">Danger</button>
         <button type="button" class="btn btn-link">Link</button>
-        <button type="button" class="btn btn-pilatus">Pilatus</button>
+        <button type="button" class="btn btn-blue">Pilatus blue</button>
+        <button type="button" class="btn btn-grey">Pilatus grey</button>
+        <button type="button" class="btn btn-white">Pilatus white</button>
     </div>
     {% highlight html %}
     <!-- Standard button -->
